--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 host='34.126.74.53'
 password='@Kris0624Capstone5'
+FIREBASE_CREDENTIALS_PATH="miniproject-de-firebase-adminsdk-t4ogl-310896718d.json"
+BUCKET_NAME="miniproject-de.appspot.com"
+port=3307
+GOOGLE_APPLICATION_CREDENTIALS="capstonede-bfac3cc70f7f.json"
+dataset_id="peduli_pintar"
