--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ host='34.126.74.53'
 password='@Kris0624Capstone5'
 FIREBASE_CREDENTIALS_PATH="miniproject-de-firebase-adminsdk-t4ogl-310896718d.json"
 BUCKET_NAME="miniproject-de.appspot.com"
+GOOGLE_APPLICATION_CREDENTIALS="capstone-de2-3b8d363c4eab.json"
 port=3307
-GOOGLE_APPLICATION_CREDENTIALS="capstonede-bfac3cc70f7f.json"
-dataset_id="peduli_pintar"
+dataset_id_fact="peduli_pintar_fact"
+dataset_id_dim="peduli_pintar_dim"
