--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .env
 miniproject-de-firebase-adminsdk-t4ogl-310896718d.json
-capstonede-bfac3cc70f7f.json
+_capstonede-bfac3cc70f7f.json
+capstone-de2-3b8d363c4eab.json
