add code for airflow

--- a/.env
+++ b/.env
@@ -1,8 +1,22 @@
 host='34.126.74.53'
 password='@Kris0624Capstone5'
-FIREBASE_CREDENTIALS_PATH="miniproject-de-firebase-adminsdk-t4ogl-310896718d.json"
+port=3306
+database='capstone5'
+# FIREBASE_CREDENTIALS_PATH="miniproject-de-firebase-adminsdk-t4ogl-310896718d.json"
 BUCKET_NAME="miniproject-de.appspot.com"
-GOOGLE_APPLICATION_CREDENTIALS="capstone-de2-3b8d363c4eab.json"
-port=3307
-dataset_id_fact="peduli_pintar_fact"
-dataset_id_dim="peduli_pintar_dim"
+# GOOGLE_APPLICATION_CREDENTIALS="capstone-de2-3b8d363c4eab.json"
+# dataset_id_fact="peduli_pintar_fact"
+# dataset_id_dim="peduli_pintar_dim"
+
+FIREBASE_CREDENTIALS_PATH="/opt/airflow/miniproject-de-firebase-adminsdk-t4ogl-310896718d.json"
+BUCKET_NAME="miniproject-de.appspot.com"
+GOOGLE_APPLICATION_CREDENTIALS="/opt/airflow/serviceAccountKeyCapstoneDE.json"
+
+
+dataset_id_fact_all="airflow_peduli_pintar_fact_all"
+dataset_id_dim_all="airflow_peduli_pintar_dim_all"
+
+AIRFLOW_UID=50000
+
+MYSQL_DATABASE=peduli_pintar
+MYSQL_ROOT_PASSWORD=Ikap258220!
