--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 miniproject-de-firebase-adminsdk-t4ogl-310896718d.json
 _capstonede-bfac3cc70f7f.json
 capstone-de2-3b8d363c4eab.json
+serviceAccountKeyCapstoneDE.json
